--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.0",
-    "@astrojs/mdx": "^0.11.5",
+    "@astrojs/image": "^0.12.1",
+    "@astrojs/mdx": "^0.11.6",
     "@astrojs/rss": "^1.0.3",
-    "@astrojs/sitemap": "^1.0.0"
+    "@astrojs/sitemap": "^1.0.0",
+    "astro": "^1.6.0"
   }
 }
